@@ -30,7 +30,7 @@
 <abstract>
 This document provides information about DOMjudge installation,
 configuration and operation for the DOMjudge administrator. A separate
-manual is available for teams (and might be for jury members).
+manual is available for teams and for jury members.
 
 Document version: $Rev$
 </abstract>
