@@ -9,7 +9,7 @@ judge-manual.pdf: judge-manual.sgml
 	linuxdoc -B latex -o pdf $<
 
 judge-manual.html: judge-manual.sgml
-	linuxdoc -B html $<
+	linuxdoc -B html --header=../docs_header.html $<
 
 distclean:
 	-rm -f judge-manual*.html judge-manual.pdf
