@@ -30,6 +30,14 @@ if ( is_readable('../images/DOMjudgelogo.png') ) {
 <li><a href="affiliations.php">Team Affiliations</a></li>
 </ul>
 
+<h3>Documentation:</h3>
+
+<ul>
+<li><a href="doc/judge/judge-manual.html">Judge manual</a> (also <a href="doc/judge/judge-manual.pdf">PDF</a>)</li>
+<li><a href="doc/admin/admin-manual.html">Administrator manual</a> (also <a href="doc/admin/admin-manual.pdf">PDF</a>)</li>
+<li><a href="doc/team/team-manual.pdf">Team manual</a> (PDF only)</li>
+</ul>
+
 <h3>Administrator:</h3>
 
 <ul>
